src/views/RealTimeMonitoring/styles.scss
@import '~base-scss/base';

.right {
    padding: 0;
}

$width-table-container: 250px;

@keyframes fade-in {
    from { opacity: 0; }
    to { opacity: 1; }
}

.left {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    max-height: calc(100vh - var(--spacing-medium) * 2);
    overflow-y: auto;
    animation: fade-in $duration-transition-slow ease-in forwards;

    .legend {
        display: flex;
        flex-direction: column;
        overflow-y: auto;
    }

    .legends-container {
        display: flex;
        flex-direction: column;
        flex-grow: 1;
        transform-origin: 0 0;
        border: $width-separator-thin solid $color-separator-light;
        border-radius: $radius-border-large;
        background-color: rgba(255, 255, 255, .9);
        width: $width-table-container;
        overflow-y: auto;

        .header {
            display: flex;
            align-items: center;
            flex-shrink: 0;
            justify-content: space-between;
            padding-right: $spacing-small;

            h4 {
                flex-shrink: 0;
                padding: $spacing-small;
                color: $color-primary;
                font-weight: $font-weight-bold;
            }
        }

        .no-legend {
            height: 120px;
        }

        .legend-items {
            flex-grow: 1;
            overflow-y: auto;
        }

        .container {
            display: flex;
            flex-direction: column;
            flex-grow: 1;
            flex-shrink: 0;
            border-bottom: $width-separator-thin solid $color-separator;
            padding: $spacing-small;
            overflow-y: auto;

            .heading {
                flex-shrink: 0;
                padding-bottom: $spacing-extra-small;
                text-transform: uppercase;
                color: $color-text-label;
                font-size: $font-size-small;
            }

            .legend {
                display: flex;
                flex-direction: column;
                flex-grow: 1;
                flex-shrink: 0;

                .legend-item {
                    padding: 0 $spacing-small;
                    font-size: $font-size-small;
                    font-weight: $font-weight-bold;

                    >div:first-child {
                        width: $font-size-medium;
                    }
                }
            }
        }
    }
}

.show-legend-button-container {
    transform-origin: 0 0;
}

.main {
    bottom: 40px;
    left: $spacing-medium;
    transform: none;

    .links {
        background-color: #fff;

        .link {
            display: flex;
            color: $color-primary;
            font-size: $font-size-large;
        }
    }
}

